# search3d

./: .gitignore  README.md  pyproject.toml  run_search3d_multiscan_obj_features.sh  run_search3d_multiscan_obj_masks.sh  run_search3d_multiscan_seg_features.sh
benchmark/data/multiscan_data_search3d/: multiscan_search3d_constants.py
benchmark/docs/scannetpp_data_search3d/: README.md
benchmark/evaluation/multiscan/: eval_semantic_instance_objects.py  eval_semantic_instance_parts.py  eval_semantic_instance_parts_OV.py  util_3d.py
benchmark/evaluation/scannetpp_subset/: eval_semantic_instance_parts_OV.py  run_eval.py  util.py  util_3d.py
benchmark/evaluation/scannetpp_subset/data/: obj_query_dict.json  test_scenes_scannetpp_subset.txt
docs/: index.html
multiscan_data_search3d/: README.md
search3d/: utils.py
search3d/benchmark/evaluation/multiscan/: eval_semantic_instance_objects.py  eval_semantic_instance_parts.py  eval_semantic_instance_parts_OV.py  util.py
search3d/benchmark/evaluation/scannetpp_subset/: run_eval.py
search3d/configs/: search3d_multiscan_eval.yaml
search3d/data/: load.py
search3d/dense_feature_computation/: compute_dense_image_features_siglip.py  fuse_dense_features_per_3d_segment.py  fusion_utils.py  utils.py
search3d/mask_feature_computation/: compute_mask_features.py  features_extractor.py  utils.py
search3d/object_and_part_computation/: get_segments.py
search3d/object_and_part_computation/object_instance_computation/: get_masks_3rscan.py  get_masks_multiscan.py  get_masks_scannet200.py  get_masks_single_scene.py
(+100 files in other folders)
